--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <div class="container">
       <div class="row-fluid heading">
 	<div class="span12">
-	  <h1>Laura's Cakes</h1>
+	  <h1>Laura's Cakes abc</h1>
         </div>
       </div>
       <div class="row-fluid subheading">
